finished introduction's main content

--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -3,6 +3,7 @@
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{amsfonts}
+\usepackage{subcaption}
 \usepackage{graphicx}
 \graphicspath{ {./images/} }
 
@@ -11,7 +12,7 @@
 
 \usepackage[a4paper, total={16cm, 23.7cm}]{geometry}
 \DeclareMathSizes{12}{13}{10}{8}
-\setlength\parindent{0pt}
+\setlength\parindent{0.7cm}
 
 \usepackage[colorlinks=true,urlcolor=blue]{hyperref}
 \usepackage{color}
@@ -20,6 +21,8 @@
 \newcommand*\Diff[1]{\mathop{}\!\mathrm{d^#1}}
 \newcommand\tab[1][.7cm]{\hspace*{#1}}
 \renewcommand{\refname}{}
+
+\captionsetup{width=0.8\textwidth}
 
 \fontfamily{phv}
 
@@ -32,7 +35,7 @@
 	% TITLE
 	%----------------------------------------------------------------------------
 	\begin{center}
-		\Huge Performance optimization of CERN's LHCb online data processing software \\
+		\Huge Performance optimization of the online data processing software of CERN's LHCb experiment\\
 		\Large Thesis report\\
 		\vspace{1pc}
 		\huge Péter Kardos \\
@@ -56,7 +59,7 @@
 	\color{black}
 	\vspace{1.5pc}
 		
-	PLACEHOLDER
+	\textcolor{cyan}{Don't read this, it's just a placeholder.}
 	So this abstract should be about 100-200 words so I'm just writing some natural text to act as a placeholder. By looping this text a few times, I can probably make a 150 word section. So this abstract should be about 100-200 words so I'm just writing some natural text to act as a placeholder. By looping this text a few times, I can probably make a 150 word section. So this abstract should be about 100-200 words so I'm just writing some natural text to act as a placeholder. By looping this text a few times, I can probably make a 150 word section. So this abstract should be about 100-200 words so I'm just writing some natural text to act as a placeholder. By looping this text a few times, I can probably make a 150 word section. So this abstract should be about 100-200 words so I'm just writing some natural text to act as a placeholder. By looping this text a few times, I can probably make a 150 word section.
 	
 	
@@ -81,7 +84,9 @@
 	\color{black}
 	\vspace{1.5pc}
 	
-	CERN (European Organization for Nuclear Research) is an international high energy experimental physics research organization situated near Geneva, on the Franco-Swiss border. CERN is host to the world's largest particle accelerator and numerous experiments which aim to provide a better understanding of the universe. The goals of the experiments, among others, are to verify the standard model of particles \textcolor{cyan}{TODO: list some more goals}.
+	\subsection{About CERN}
+	
+	CERN (European Organization for Nuclear Research) is an international high energy experimental physics research organization situated near Geneva, on the Franco-Swiss border. CERN is host to the world's largest particle accelerator and numerous experiments which aim to provide a better understanding of the universe. The goals of the experiments, among others, are to verify the standard model of particles. \textcolor{cyan}{TODO: list more concrete goals}.
 	\cite{cern_about}
 	
 	
@@ -89,37 +94,93 @@
 	
 	\begin{figure}[H]
 		\includegraphics[width=\textwidth]{accelerator_complex}
+		\caption{Schematic view of CERN's particle accelerators and experiments. LHC is shown on top by the largest circle. The four main experiments, CMS, ALICE, ATLAS and LHCb are marked with yellow dots along the LHC's circle.}
 		\label{fig_accel_complex}
-		\caption{Schematic view of CERN's particle accelerators. Our main concern, LHC, is the largest circle shown on the top, along with the four main experiments, CMS, ALICE, ATLAS and LHCb, marked with a yellow dot.}
 	\end{figure}
+
+	While CERN is mostly known for its Large Hadron Collider (LHC) which this thesis is concerned with, it is home to many more particle accelerators. These accelerators are useful on their own, but from the perspective of the LHC they are used to provide high energy protons that the LHC can further accelerate. Too low energy protons cannot be directly accepted into the LHC, so a sequence of progressively larger accelerators bump the energies up in steps. When a particular accelerator reached its top energy, its beam is simply transferred to a bigger one, finally getting injected into LHC.
 	
-	LHC (Large Hadron Collider) is CERN's largest particle accelerator, or particle collider to be more precise. LHC is primarily used to accelerate protons. The particles are accelerated in multiple stages, in other words, a smaller accelerator accelerates them as much as it can, then particles are transferred to a larger accelerator which bumps them to an even higher energy, finally ending up in LHC at 7 TeV \cite{lhc_energy}.
+	The LHC is CERN's largest machine. It can be found inside a circular underground tunnel of a circumference of 27km. There are two accelerators inside the tunnel which accelerate protons so that there is one beam clockwise and another counter-clockwise. Protons are not equally distributed in the beams as they circle around, rather, they can be found in many equally spaced \textit{bunches}.
 	
-	In the LHC, there are two proton beams circling at the same time, but in opposite directions. These beams are made to cross each-other at certain points, giving way to proton-proton collisions at 13-14 TeV. The collision produce a large number of various particles, which then fly away from the collision point.
-	
+	At specific points along the circle of the LHC, the two beams of opposing directions are made to cross each other's path. As two bunches go through the crossing point at the same time and the individual protons collide\cite{lhc_bunch_collisions}. Since each proton carries around 7 TeV of energy, the collision's yield is about 14 TeV. In the collision, other particles might be born, and that's exactly what scientists are looking forward to analyze.	
+
 	
 	\subsection{Experiments on LHC}
 	
-	The four largest experiments, ATLAS, CMS, ALICE and LHCb, have their dedicated underground rooms at the collisions points. In these rooms, huge detectors are installed which are meant to track the particles created during the the collision. ATLAS and CMS have general purpose detectors aimed to examine a wide range of physics phenomena, while ALICE and LHCb have specialized detectors. The raw data produced by detectors is processed by software to identify each particle and their paths, and finally physicists analyze the results.
+	As seen on figure \ref{fig_accel_complex}, the four main experiments dedicated to analyze LHC collisions are ATLAS, CMS, ALICE and LHCb. Consequently, these experiments have huge underground rooms around the collisions points, where they can fit their instruments.
+	
+	The instruments are meant to track and identify particles created in the collisions, and are thus called particle \textit{detectors}. The type and properties of particles created in the collisions provide valuable data to physicists who are trying to verify and extend the standard model of particles. In most cases, the raw data provided by the detectors is processed by software, which does the tracking and identification.
 	
 	
-	\subsection{LHCb detector hardware}
-	
-	To understand how particle paths are reconstructed in software, one must understand the various parts of the detector used for tracking.
-	
+	\subsection{LHCb's detector}
+		
 	\begin{figure}[H]
 		\includegraphics[width=\textwidth]{lhcb_geometry_upgrade}
-		\label{fig_lhcb_geometry}
 		\caption{Side view of the LHCb detector.}
+		\label{fig_lhcb_geometry}
 	\end{figure}
 
-	Figure \ref{fig_lhcb_geometry} depicts the LHCb detector from the side, making detector layers visible. The beam 
+	Figure \ref{fig_lhcb_geometry} shows the LHCb detector from the side, which means that the two beams of LHC are going in horizontal directions on the drawing through the middle of the detector. The middle of the detector coincides with the horizontal axis of symmetry.
 	
-	\subsection{LHCb software reconstruction and computing hardware}
+	As seen on the labels, the detector consists of multiple layers of sub-detectors. Each layer has a hole in the center to let the beam pipes through. The two particle beams cross each other inside the Vertex Locator (VELO, at the right in yellow).
+	
+	While full reconstruction uses all sub-detectors, real-time reconstruction only uses the VELO, the UT (in orange, left of VELO) and the FT (SciFi Tracker, in the middle in orange). Let's follow the life of a particle from its birth inside the VELO. While flying away from the collision point, it first crosses multiple layers of the VELO. Each layer consists of many pixels, and whenever the particle touches a pixel, the VELO forwards this information to the software. Eventually, the particle leaves the VELO and goes through the UT. The UT has a different mechanism compared to the VELO, but essentially it also records if a particle has gone through one of its layers. Leaving the UT, the particle goes through the large magnet, where its path is bent due to the Lorentz force by an amount dependent on its electric charge and momentum. The particle then keeps going straight through the FT, where its location is registered as usual. Note that for each bunch collision, hundreds of new particles go through the detector as described above. The reconstruction software tries to make sense out of the large number of registered particle positions by using knowledge about the magnetic field, and eventually identifies the individual particles and their tracks.
+	
+	The purpose of real-time (sometimes called \textit{online}) reconstruction is to determine what data to store. Most collision events are not interesting at all from a physics perspective, and only a small fraction is kept for long-term storage. Storing all data would be unfeasible because of its sheer amount. The software doing the online reconstruction and selection is called the \textit{trigger}.
+	
+	\subsection{The 2018/19 upgrade of LHCb}
+	
+	The catch with the above described detector is that it does not really exist yet. The LHC will be shut down in 2018 december for maintenance, and that's when the LHCb collaboration will upgrade its detector to the one above. (The current detector is similar in construction, that's why it's referred to as \textit{upgrade}.)
+	
+	With the upgrade, software data processing will change significantly as well. Around 30 million bunch collision events occur every second, each of which go through the trigger. With the current detector, triggering is first done by hardware electronics, selecting only 1 million events per second, which are then further culled on a big server farm by software written in C++. After the upgrade, the hardware trigger is dropped and the entire trigger runs in software. This puts the high requirement on the software trigger to reconstruct and cull all the 30 million events every second.
+	
+	\begin{figure}[H]
+		\centering
+		\begin{subfigure}{.5\textwidth}
+			\centering
+			\includegraphics[width=.4\linewidth]{LHCb_Trigger_RunII_May2015}
+			\caption{Trigger data flow scheme\\ before the upgrade}
+			\label{fig:sub1}
+		\end{subfigure}%
+		\begin{subfigure}{.5\textwidth}
+			\centering
+			\includegraphics[width=.4\linewidth]{LHCb_Trigger_RunIII_May2015}
+			\caption{Trigger data flow\\ scheme post-upgrade}
+			\label{fig:sub2}
+		\end{subfigure}
+		\caption{Comparison of the two triggering solutions}
+		\label{fig_trigger_compare}
+	\end{figure}
+	
+	
+	\subsection{Overview of the trigger software}
+		
+	\begin{figure}[H]
+		\begin{center}
+			\includegraphics[width=0.6\textwidth]{algorithms_brunel}
+		\end{center}
+		\caption{Simplified view of algorithms that perform online reconstruction.}
+		\label{fig_algorithms_brunel}
+	\end{figure}
+
+
+	The trigger software is basically the online reconstruction code and additional logic to select which events to keep. The online reconstruction software can be broken down to individual pieces referred to as \textit{algorithms}, each of which serves a specific purpose. First of all, the highly compressed data that arrives from the detector has to be decoded to acquire hits that describe the position and measurement error of points where a particle has been seen. Second, the particles' tracks are progressively reconstructed by starting from the collision point in the VELO, and appending hits to an existing track. In the VELO and UT, we are looking for hits that form a straight line, and we try to match this straight track to another similarly straight track inside the FT. Finally, the track goes through fitting, which tries to modify the existing rough track to more closely line up with the hits it was produced from.
+	
+
+	\subsection{The aim of this thesis project}
+	
+	As mentioned, the abandoning of the hardware trigger stage highly increases the load on the software trigger. The main goal of this project is to optimize the current software trigger to make it about 3 times as fast. Failure to do so will result in valuable events being dropped, thus reducing the physics potential of the experiment.
+	
+	Current computing hardware has changed significantly from the ones the software trigger was originally made for. The even larger gap between memory and CPU speeds demands a more efficient use of CPU caches. Additionally, CPU instruction sets now include SIMD operations, which can, for example, do 4 floating point operations in place of one in the same amount of time. Furthermore, modern CPUs have a complex logic for branch prediction and instruction pipelining, which require code to be tailored to serve them.
+
+	To exploit the full capability of current hardware, not only individual pieces of the trigger software need to be changed, but the global data flow also has to be rethought and optimized.
+	
+	During this thesis project, I will be helping the LHCb collaboration to reach its optimization goals for the software trigger.
 	
 	%----------------------------------------------------------------------------
 	% === TBD ===
 	%----------------------------------------------------------------------------
+	\newpage
 	\section{Choosing optimization targets}
 	
 	\color{red}
@@ -131,7 +192,14 @@
 	%----------------------------------------------------------------------------
 	\section{Parametrized Kalman Fitter}
 	
-	\subsection{What is fitting}
+	\subsection{Purpose of the fitter}
+	
+	\subsection{Performance profiling for hotspots}
+	
+	\subsection{Eliminating the hotspots}
+	
+	\subsection{Evaluation of results}
+		
 	
 	%----------------------------------------------------------------------------
 	% === TBD ===
@@ -166,8 +234,11 @@
 			\url{https://home.cern/topics/large-hadron-collider}
 		\bibitem{lchb_desc} About the Large Hadron Collider beauty experiment: \\
 			\url{https://home.cern/about/experiments/lhcb}
+		\bibitem{lhc_lead_ions} Why collide lead ions: \\
+			\url{http://alicematters.web.cern.ch/?q=FAQ-why-lead-ions}
 		\bibitem{lhc_energy} Energy of the LHC: \\
 			\url{https://home.cern/about/engineering/restarting-lhc-why-13-tev}
+		\bibitem{lhc_bunch_collisions} https://lhc-machine-outreach.web.cern.ch/lhc-machine-outreach/collisions.htm
 	\end{thebibliography}
 
 \end{document}
